fix sizing issues for home page on small screens

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,14 +3,13 @@
 
 :host {
 	@include section('light');
+	align-items: center;
 }
 
 .profile-picture {
-	position: absolute;
 	margin-top: 50px;
 	width: 30vw;
 	min-width: 400px;
-	left: 35vw;
 	object-fit: cover;
 }
 
@@ -20,9 +19,10 @@
 	position: absolute;
 	left: 0;
 	bottom: 0;
-	margin-left: 4vw;
+	padding-left: 4vw;
 	margin-bottom: 100px;
 	line-height: 1.5;
+	max-width: 100vw;
 	.title {
 		font-family: 'title';
 		font-size: 90px;
@@ -45,48 +45,59 @@
 
 		overflow: hidden;
 		white-space: nowrap;
-		margin: 0 auto;
-		$widths : 405px, 452px, 709px; // width of the paragraphs
+		max-width: min-content;
 		&.line1 {
 			width: 0px;
 			animation:
-				typing-#{nth($widths, 1)} .4s steps(17, end) forwards,
+				typing .4s steps(10, end) forwards,
 				blink-caret .4s step-end forwards;
 		}
 		&.line2 {
 			width: 0px;
 			animation:
-				typing-#{nth($widths, 2)} .5s steps(19, end) forwards,
+				typing .5s steps(12, end) forwards,
 				blink-caret .5s step-end forwards;
 			animation-delay: .4s;
 		}
 		&.line3 {
 			width: 0px;
 			animation:
-				typing-#{nth($widths, 3)} .8s steps(30, end) forwards,
+				typing .7s steps(24, end) forwards,
 				blink-caret .8s step-end forwards;
 				animation-delay: .9s;
 		}
-		@for $i from 1 through length($widths) {
-			@keyframes typing-#{nth($widths, $i)} {
-				from { width: 0px }
-				to { width: nth($widths, $i) }
-			}
-		}
-
-		@keyframes blink-caret {
-			from { border-color: $dark_color; border-right: 30px solid $dark_color; }
-			to { border-color: transparent }
-		}
-
 	}
 }
 
+@keyframes typing {
+	from { width: 0% }
+	to { width: 100% }
+}
+
+@keyframes blink-caret {
+	from { border-right: 30px solid $dark_color; }
+	to { border-right: 30px transparent;  }
+}
+
 @media screen and (max-width: 1080px) {
-	.title {
-		font-size: 65px;
-	}
-	.description {
-		font-size: 40px;
+	.content {
+		.title {
+			font-size: 10vw;
+		}
+		.description {
+			font-size: 6vw;
+			&.line1 {
+				width: auto;
+				animation: none;
+			}
+			&.line2 {
+				width: auto;
+				animation: none;
+			}
+			&.line3 {
+				width: auto;
+				animation: none;
+			}
+		}
 	}
 }
