--- a/src/globals.scss
+++ b/src/globals.scss
@@ -7,6 +7,7 @@
 	height: 100vh;
 	width: 100%;
 	min-height: 900px;
+	overflow: hidden;
 	@if $theme == 'dark' {
 		color: $light_color;
 		background-color: $dark_color;
